--- a/HMI_Плотномер/Views/MainWindow.xaml
+++ b/HMI_Плотномер/Views/MainWindow.xaml
@@ -59,17 +59,25 @@
                 </Grid>
             </Border>
             <!--#endregion-->
-            <!--#region Серийный номер -->
+            <!--#region Измерительный процесс -->
             <Border Grid.Column="2"  Margin="5">
-                <UniformGrid Rows="2">
-                    <TextBlock Text="Серийный номер:" VerticalAlignment="Center" HorizontalAlignment="Center"></TextBlock>
-                    <TextBlock Text="000000" VerticalAlignment="Center" HorizontalAlignment="Center"></TextBlock>
-                </UniformGrid>
+                <TextBlock HorizontalAlignment="Center"
+                           VerticalAlignment="Center">
+                    <TextBlock.Text >
+                        <MultiBinding Converter="{StaticResource StringByIndex}">
+                            <Binding Path="mainModel.CurMeasProcessNum.Value" />
+                            <Binding Path="MeasProcessNamesArr"/>
+                        </MultiBinding>
+                    </TextBlock.Text>
+                </TextBlock>
             </Border>
             <!--#endregion-->
             <!--#region Индикатор связи с платой -->
             <Border Background="{Binding mainModel.Connecting.Value, Converter={StaticResource ColorToBool}}"  Grid.Column="3" Margin="5">
-                <TextBlock Text="Связь с платой" VerticalAlignment="Center" HorizontalAlignment="Center"></TextBlock>
+                <TextBlock Text="Связь с уровнемером" 
+                           VerticalAlignment="Center"
+                           HorizontalAlignment="Center"
+                           TextWrapping="Wrap"/>
             </Border>
             <!--#endregion-->
             <!--#region Индикатор измерений -->
@@ -286,14 +294,10 @@
                     <!--#endregion-->
 
                     <!--#region Числовая индикация ФВ -->
-                    <Grid Grid.Column="1">
+                    <Grid Grid.Column="1" Grid.RowSpan="2">
                         <Grid.Resources>
                             <Style TargetType="TextBlock" BasedOn="{StaticResource Common}"/>
-                        </Grid.Resources>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition></ColumnDefinition>
-                            <ColumnDefinition></ColumnDefinition>
-                        </Grid.ColumnDefinitions>
+                        </Grid.Resources>                        
                         <Grid.RowDefinitions>
                             <RowDefinition></RowDefinition>
                             <RowDefinition></RowDefinition>                            
@@ -312,7 +316,7 @@
                         <!--#endregion-->
                         <!--#region Усредненное значение ФВ -->
                         <UserControl Margin="5"
-                                     Grid.Column="1"
+                                     Grid.Row="1"
                                      Template="{StaticResource NumericDisplay}"                                     
                                      DataContext="{Binding mainModel.PhysValueAvg}">
                             <UserControl.Tag>
@@ -322,20 +326,7 @@
                                 </MultiBinding>
                             </UserControl.Tag>
                         </UserControl>
-                        <!--#endregion-->
-                        <!--#region Мгновенное значение концетрации -->
-                        <UserControl Grid.Row="1"
-                                     Margin="5"
-                                     Template="{StaticResource NumericDisplay}"                                     
-                                     DataContext="{Binding mainModel.ContetrationValueCur}"/>
-                        <!--#endregion-->
-                        <!--#region Усредненное значение концетрации -->
-                        <UserControl Grid.Row="1"
-                                     Margin="5"
-                                     Grid.Column="1"
-                                     Template="{StaticResource NumericDisplay}"                                     
-                                     DataContext="{Binding mainModel.ContetrationValueAvg}"/>
-                        <!--#endregion-->                        
+                        <!--#endregion-->                                          
                     </Grid>
                     <!--#endregion-->                    
 
@@ -528,7 +519,7 @@
             </TabItem>
             <!--#endregion-->
             <!--#region Расширенные настройки -->
-            <TabItem Header="РАСШИРЕННЫЕ НАСТРОЙКИ">
+            <TabItem Header="РАСШИРЕННЫЕ НАСТРОЙКИ" Visibility="{Binding CurUser, Converter={StaticResource UserToVisibility}, ConverterParameter=Администратор}">
                 <TabItem.Resources>
                     <!--#region Общий стиль для DaraGrid -->
                     <Style TargetType="DataGrid">
